# Oluwafemi-Olajide-weather-api

./: .gitignore  README.md  env.example  pyproject.toml
streamlit_app/: app.py
tests/: conftest.py  test_cmd_line.py  test_weather_core.py
weather/: cmd_line.py  core.py
