[project]
name = "weather-app"
version = "0.1.0"
description = "A Streamlit dashboard for current and forecast weather using OpenWeather API"
authors = [
    {name = "Olajide Oluwafemi", email = "olajiderichard44@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.44.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
